force-app/main/default/objects/custom_create160__c/custom_create160__c.object-meta.xml
<CustomObject>
    <label>Custom created object160</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects160</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>