force-app/main/default/objects/custom_create160__c/fields/custom_create_160field575__c.field-meta.xml
<CustomField>
    <fullName>custom_create_160field575__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 160field575</label>
    <type>Checkbox</type>
</CustomField>